<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012-2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Advanced display</string>

    <string name="defaults_button">Reset to default</string>

    <!-- Screen Preference -->
    <string name="category_screen_title">Screen</string>
    <string name="screen_colors_title">Colors</string>

    <!-- mDNIe -->
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe mode</string>
    <string name="mdnie_negative_title_head">Negative mode</string>
    <string name="mdnie_negative_summary_head">Enable/disable inverted colors</string>
</resources>
